# excel-copilot-next

./: .env.example  QUICKSTART.md  README.md  dev.sh  package.json  pnpm-workspace.yaml
.claude/: settings.local.json
backend/: package.json  tsconfig.json
backend/src/: index.ts
backend/src/db/: index.ts  schema.ts
backend/src/mastra/: agent.ts  index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  chat.ts  files.ts
backend/src/services/: fileStorage.ts  pythonExecutor.ts
frontend/: README.md  next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: file-manager.tsx
frontend/lib/: api-client.ts
python-executor/: README.md  pyproject.toml
python-executor/src/: code_executor.py  kernel_manager.py  main.py  models.py
python-executor/tests/: conftest.py  test_api.py  test_executor.py  test_kernel_manager.py
