[project]
name = "excel-executor"
version = "0.1.0"
description = "Python code execution service for Excel Copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    "polars>=1.17.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "jieba>=0.42.1",
    "openpyxl>=3.1.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]
